Update ItemDAO.java